--- a/OOP/teste.html
+++ b/OOP/teste.html
@@ -1,22 +1,56 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt_BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>NÃO FODE PORRA</title>
     <style>
 
-        .imggg{
-            width: 50px;
+
+
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+            font-size: 1em;
+            color: black;
         }
+
+
+
+        a {
+            text-decoration: none;
+            font-weight: bold;
+            &:hover {
+                text-decoration: underline;
+            }
+
+            &:active {
+                color: blue;
+            }
+
+            &::after{
+                content: ' (link)';
+            }
+
+
+        }
+
+
+
+        
+
+
 
 
     </style>
 </head>
 <body>
 
-    <td class=""></td>
-    <img src="assassin.png" class="imggg">
-    
+<ol>
+    <li><a href="#">Aiaiai clique aqui</a>
+    <li><a href="#">Linkao 2</a>
+    <li><a href="#">Segredo...</a>
+</ol>
+
+
 </body>
 </html>
