--- a/OOP/teste.html
+++ b/OOP/teste.html
@@ -6,33 +6,25 @@
     <title>NÃO FODE PORRA</title>
     <style>
 
-
-
         body {
-            font-family: Arial, Helvetica, sans-serif;
-            font-size: 1em;
-            color: black;
+            background-image: url(images/wallpaper003.jpg);
+            background-size: cover;
+            background-attachment: fixed;
         }
 
 
 
-        a {
-            text-decoration: none;
-            font-weight: bold;
-            &:hover {
-                text-decoration: underline;
-            }
 
-            &:active {
-                color: blue;
-            }
+    /*    .buceta {
+            width: 300px;
+            height: 300px;
+            background-color: lightgrey;
+            border-radius: 10px;
+            border: 2px solid black;
+            background-image: url(images/wallpaper002.jpg);
+            background-position: right bottom;
+        }*/
 
-            &::after{
-                content: ' (link)';
-            }
-
-
-        }
 
 
 
@@ -45,11 +37,10 @@
 </head>
 <body>
 
-<ol>
-    <li><a href="#">Aiaiai clique aqui</a>
-    <li><a href="#">Linkao 2</a>
-    <li><a href="#">Segredo...</a>
-</ol>
+<div class="buceta">
+
+
+</div>
 
 
 </body>
